# Python_jsonsimpleconfig

./: .flake8  .gitignore  .pycodestyle  .pylintrc  CHANGELOG  Makefile  README.md  mypy.ini  prospector_profile.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tools.sh  tox.ini
.github/workflows/: test-jsc.yml
jsonsimpleconfig/: __init__.py  jsc2json.py  jscPrint.py  jscValue.py  jsc_print.py  jsc_value.py  json2csv.py  json2jsc.py
jsonsimpleconfig/jsccommon/: JscComments.py  JscCommon.py  __init__.py  jsc_comments.py  jsc_common.py
jsonsimpleconfig/jscdata/: JscData.py  JscSection.py  __init__.py  flat_data.py  jsc_data.py  jsc_section.py
jsonsimpleconfig/jscextractor/: JscExtractor.py  JscHeader.py  JsonExtractor.py  __init__.py  jsc_extractor.py  jsc_header.py  json_extractor.py
jsonsimpleconfig/jschelper/: Jsc.py  Jsc2JsonHelper.py  JscConfig.py  Json2JscHelper.py  __init__.py  jsc.py  jsc2json_helper.py  jsc_config.py  jsc_managed_config.py  json2csv_helper.py  json2jsc_helper.py
jsonsimpleconfig/jscparser/: JscParser.py  Json.py  __init__.py  jsc_parser.py  json.py
jsonsimpleconfig/jscresources/: defaultHeader.template
tests/: __init__.py  jsc_comments_test.py  jsc_config_test.py  parse_string_jsc_test.py
tests/jscdata/: __init__.py  jsc_data_test.py
